# Bitcoin-Auto-Trading

./: .dockerignore  .gitignore  CLAUDE.md  MIGRATION_PROGRESS.md  Makefile  README.md  SPEC.md  docker-compose.yml  readme.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_market_data_table.py  002_create_trading_signals_table.py  003_create_risk_management_tables.py  004_add_signal_performance_fields.py  005_create_backtest_results_table.py  006_add_symbol_to_market_data.py  007_create_users_table.py  008_add_audit_columns.py  009_migrate_data_ownership.py  010_finalize_constraints.py  011_create_user_configs.py  012_drop_backtest_results.py  013_add_avg_cost_at_order.py  014_add_balance_adjustments.py  015_add_profit_taking_fields.py  20260115_224128_eac701d922f9_create_orders_table.py  20260119_195822_a97d74808344_add_idempotency_key_and_position_size_.py
backend/src/: __init__.py  app.py  config.py  database.py  main.py
backend/src/api/: __init__.py  backtest.py  config.py  dashboard.py  deps.py  health.py  risk.py  router.py  signals.py  trading.py
backend/src/api/schemas/: __init__.py  backtest.py  config.py  dashboard.py  market.py  order.py  risk.py  signal.py
backend/src/clients/: __init__.py  auth_client.py  common.py  slack_client.py  telegram_client.py
backend/src/clients/ai/: __init__.py  base.py  client.py  gemini_client.py  openai_client.py
backend/src/clients/sentiment/: __init__.py  (+1 more)
backend/src/config/: __init__.py  constants.py  logging.py  settings.py
backend/src/entities/: __init__.py  backtest_result.py  balance_adjustment.py  base.py  daily_stats.py  market_data.py  order.py  position.py  risk_event.py  system_config.py  trading_signal.py  user.py  user_config.py
backend/src/models/: __init__.py  backtest_result.py  daily_stats.py  market_data.py  order.py  position.py  risk_event.py  system_config.py  trading_signal.py
backend/src/repositories/: __init__.py  base.py  config_repository.py  market_repository.py  order_repository.py  position_repository.py  signal_repository.py  user_config_repository.py  user_repository.py
backend/src/scheduler/: __init__.py  jobs.py  metrics.py  scheduler.py
backend/src/services/: __init__.py  ai_client.py  auth_client.py  backtest_runner.py  data_collector.py  hybrid_signal_generator.py  multi_timeframe_analyzer.py  notifier.py  order_executor.py  prompt_templates.py  risk_manager.py  signal_generator.py  signal_performance_tracker.py  slack_log_handler.py  technical_indicators.py  upbit_client.py  volatility_breakout.py
backend/src/utils/: __init__.py  cache.py  database.py  datetime_utils.py  retry.py
backend/tests/: conftest.py  test_order_executor.py
backend/tests/integration/: test_health_detail.py
backend/tests/unit/: test_cache.py  test_database_pool.py  test_masking.py  test_retry.py
(+330 files in other folders)
