[project]
name = "bitcoin-auto-trading-backend"
version = "0.1.0"
description = "Bitcoin Auto-Trading System Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "apscheduler>=3.11.0",
    "loguru>=0.7.0",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # allow assert (for tests)
    "S105",  # false positive: "PASS" is status value, not password
    "S311",  # random for jitter is acceptable, not crypto
    "S324",  # md5 for cache key is acceptable, not security
    "B008",  # FastAPI Depends() in function defaults is standard pattern
    "RUF001", # unicode characters (×, ℹ) are intentional in Korean text
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/routes.py" = ["B008"]  # FastAPI pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
